# SiglusEngine_rs

./: CMD_ROUTE_CHECKLIST.md  Cargo.toml  README.md
docs/: frame_action_epoch_slot_regression_template.md
reference/: iapp_dummy_call_matrix.csv  quake_baseline.csv
src/: angou.rs  angou_consts.rs  dat.rs  gameexe.rs  lexer.rs  lib.rs  lzss.rs  main.rs  pck.rs  resource.rs  runtime.rs  stack.rs
src/elm/: allevent.rs  bgm.rs  bgmtable.rs  btnselitem.rs  btnselitemlist.rs  call.rs  cgtable.rs  counter.rs  counterlist.rs  databaselist.rs  editbox.rs  effect.rs  effectlist.rs  excall.rs  file.rs  form.rs  frameaction.rs  g00buf.rs  g00buflist.rs  global.rs  group.rs  grouplist.rs  input.rs  intevent.rs  joypad.rs  joystick.rs  joytrigger.rs  keyboard.rs  list.rs  mask.rs  masklist.rs  math.rs  mod.rs  mouse.rs  mov.rs  msgbk.rs  mwnd.rs  objectevent.rs  objecteventlist.rs  objectlist.rs  (+17 more)
src/gui/: app_logic.rs  app_quake_reference.rs  app_render.rs  app_render_overlay_macro.rs  app_runtime_effects.rs  app_tweet_dialog.rs  audio.rs  cancel_se_map.rs  gui.rs  gui_assets.rs  gui_config.rs  host_events.rs  host_impl.rs  host_impl_input.rs  host_impl_int_event.rs  host_impl_quake_macro.rs  host_impl_stage_object.rs  (+19 more)
tools/: check_failed_code_selector_consistency.py  check_movie_lifecycle_matrix.py  extract_group_wait_trace.py  frame_action_epoch_slot_sampler.py  group_wait_input_stock_regression.py  prune_reference_reports.py  regress_failed_code_dynamic.py  run_frame_action_epoch_slot_regression.py  run_group_wait_full_pipeline.py  validate_movie_wait_boundary_trace.py
(+56 files in other folders)
