[package]
name = "siglus"
version = "0.1.0"
edition = "2024"

[dependencies]
encoding_rs = "0.8"
anyhow = "1"
widestring = "1"
hex-literal = "1.1.0"
log = "0.4.29"
image = "0.25.9"
eframe = { version = "0.33.3", default-features = true }
simplelog = "0.12.2"

[profile.release]
strip = true
debug = 0
split-debuginfo = "off"
lto = "thin"
codegen-units = 1
opt-level = "s"
panic = "abort"
